-Fixed css bug navigation height not showing as 100%

--- a/funcakes.css
+++ b/funcakes.css
@@ -1,8 +1,8 @@
 * {padding: 0; margin: 0;}
 
+html, body{height: 100%;}
+
 body{
-	min-height: 100%;
-	height: 100%;
 	text-align: center;
 	background-color: #FFF5F5;
 }
@@ -44,7 +44,7 @@ h2, h3, .item_header{color: #eb268f;}
 	background: url(images/nav-background.jpg) no-repeat;
 	background-attachment: fixed;
 	background-size: 100%;
-	height: 100%;
+	min-height: 100%;
 	width: 100%;
 	position: relative;
 }
